<resources>
    <string name="app_name">سیستم خرید نگار</string>
    <string name="accountname">نام کاربری</string>
    <string name="id">شناسه کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="enter">ورود</string>
    <string name="forgetpassword">فراموشی رمز عبور</string>
    <string name="line"> - </string>
    <string name="register">ثبت نام</string>
    <string name="adminenter">ورود مدیران</string>
    <string name="waregroup1">لبنیات</string>
    <string name="waregroup2">پروتئین</string>
    <string name="waregroup3">مواد شوینده</string>
    <string name="waregroup4">تنقلات</string>
    <string name="waregroup5">ارزاق عمومی</string>
    <string name="waregroup6">سایر</string>
    <string name="forgetinfo">رمز عبور جدید به شماره ای که ثبت کرده اید ارسال خواهد شد</string>
    <string name="sendpass">ارسال رمز عبور</string>
    <string name="accountpanel">پنل کاربری</string>
    <string name="visitcart">مشاهده سبد خرید</string>
    <string name="visitorders">مشاهده وضعیت سفارشات</string>
    <string name="accountnameinvalid">این نام کاربری قبلا انتخاب شده است</string>
    <string name="lastname">نام خانوادگی</string>
    <string name="address">آدرس</string>
    <string name="repeatnewpass">تکرار رمز عبور جدید</string>
    <string name="repeatpass">تکرار رمز عبور</string>
    <string name="newpass">رمز عبور جدید</string>
    <string name="confirmchanges">ثبت تغییرات</string>
    <string name="deletaccount">حذف حساب کاربری</string>
    <string name="name">نام</string>
    <string name="phone">تلفن همراه</string>
    <string name="wrongaccontnameorpass">نام کاربری یا رمز عبور اشتباه است.</string>
    <string name="notallow">متاسفانه اکانت شما از طرف مدیریت مسدود شده است.</string>
    <string name="repeatpasserror">رمز وارد شده یکسان نیست</string>
    <string name="entercorrctlyrepass">تکرار رمز عبور را به طور صحیح وارد کنید</string>
    <string name="registercompleted">ثبت نام انجام شد</string>
    <string name="passleghterror">رمز کوتاه تر از حد استاندارد است.</string>
    <string name="phoneerror">شماره تلفن را درست وارد کنید</string>
    <string name="ok">تایید</string>
    <string name="search">جستجو</string>
    <string name="warenameforsearch">نام کالا برای جستجو</string>
    <string name="warename">نام کالا : </string>
    <string name="price">قیمت : </string>
    <string name="stock">موجود : </string>
    <string name="thereis">هست</string>
    <string name="thereisnot">نیست</string>
    <string name="quantity">تعداد : </string>
    <string name="cancel">لغو</string>
    <string name="singleorderinfo">لطفا تعداد مورد خود را وارد کنید</string>
    <string name="addorder">افزودن سفارش به سبد خرید</string>
    <string name="notenoughstock">متاسفانه سفارش شما بیشتر از موجودی انبار است</string>
    <string name="cart">سبد خرید</string>
    <string name="chengeisdone">تغییرات ثبت شد</string>
    <string name="deletaccountwarnning">آیا میخواهید حساب کاربری خود را حذف کنید؟</string>
    <string name="faji">تایید سبدخرید</string>
    <string name="cartisconfirmed">سبدخرید شما ثبت شد</string>
    <string name="cartslist">لیست سبدهای خرید</string>
    <string name="newware">کالای جدید</string>
    <string name="waregroup">گروه کالا :</string>
    <string name="stocknum">تعداد در انبار : </string>
    <string name="saveware">ثبت کالا</string>
    <string name="wareseved">کالای جدید ثبت شد</string>
    <string name="entervalidvalue">مقدار صحیح را وارد کنید</string>
</resources>
