<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="5dp"
    tools:context=".Account_Panel">




    <EditText
        android:id="@+id/renewaccountnametext"
        android:hint="@string/accountname"
        android:gravity="center"
        android:singleLine="true"
        android:maxLength="20"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/reaccontnamewarning"
        android:text="@string/accountnameinvalid"
        android:visibility="invisible"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#FA2248"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/renewlastnametext"
            android:hint="@string/lastname"
            android:singleLine="true"
            android:maxLength="18"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/renewnametext"
            android:hint="@string/name"
            android:maxLength="15"
            android:singleLine="true"
            android:gravity="center"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/renewphonetext"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="11"
        android:singleLine="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:hint="@string/address"
        android:layout_marginTop="10dp"
        android:id="@+id/renewaddresstext"
        android:maxLength="100"
        android:layout_marginHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rerepeatpasswordtext"
            android:hint="@string/repeatnewpass"
            android:maxLength="8"
            android:singleLine="true"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/renewpasswordtext"
            android:hint="@string/newpass"
            android:maxLength="8"
            android:singleLine="true"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/acpanel_passERRORtv"
        android:text="@string/repeatpasserror"
        android:textColor="@color/textviewwarnning"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/changeccountdetailsbutton"
        android:text="@string/confirmchanges"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/deletaccounbutton"
        android:text="@string/deletaccount"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />



</LinearLayout>