<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".Register">

<LinearLayout
    android:layout_marginTop="12sp"
    android:gravity="right"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/accountnamewarnning"
        android:text="@string/accountnameinvalid"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/textviewwarnning"
        android:visibility="invisible"
        android:layout_marginHorizontal="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/newaccountnametext"
        android:hint="@string/accountname"
        android:singleLine="true"
        android:maxLength="12"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />
</LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginHorizontal="3dp"
            android:id="@+id/newlastnametext"
            android:hint="@string/lastname"
            android:singleLine="true"
            android:maxLength="15"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginHorizontal="3dp"
            android:id="@+id/newnametext"
            android:hint="@string/name"
            android:singleLine="true"
            android:maxLength="12"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newphonetext"
            android:hint="@string/phone"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="11"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/newaddresstext"
            android:hint="@string/address"
            android:maxLength="100"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/newpasswordtext"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:maxLength="8"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/repeatnewpasswordtext"
            android:inputType="numberPassword"
            android:hint="@string/repeatpass"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:maxLength="8"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/passerrorst"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textviewwarnning"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/repeatpasserror"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/regiterbutton"
            android:text="@string/register"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="60dp" />


    </LinearLayout>


</LinearLayout>

