<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enteraccountname"
            android:hint="@string/accountname"
            android:gravity="center"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="20dp"
            android:singleLine="true"
            android:inputType="text"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/entrypassword"
            android:hint="@string/password"
            android:gravity="center"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="20dp"
            android:singleLine="true"
            android:maxLength="8"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/entercustombutton"
            android:text="@string/enter"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/wrongaccontpass"
            android:text="@string/wrongaccontnameorpass"
            android:textSize="16sp"
            android:visibility="invisible"
            android:textColor="@color/textviewwarnning"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20sp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgetpasswordtext"
            android:text="@string/forgetpassword"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/line"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/regitertext"
            android:text="@string/register"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/line"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/adminentrytext"
            android:text="@string/adminenter"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</GridLayout>