<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".Forget_Password">



    <TextView
        android:layout_marginTop="30dp"
        android:text="@string/forgetinfo"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="80dp"
        android:id="@+id/forget_accuntnametext"
        android:singleLine="true"
        android:maxLength="20"
        android:hint="@string/accountname"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/forget_button"
        android:text="@string/sendpass"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_width="150dp"
        android:layout_height="80dp" />





</LinearLayout>