<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewWare">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newware_warenametext"
            android:singleLine="true"
            android:maxLength="20"
            android:layout_width="160dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/warename"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/newware_spinnerforGW"
            android:layout_width="100dp"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:text="@string/waregroup"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/newware_warepricetext"
            android:layout_width="130dp"
            android:singleLine="true"
            android:maxLength="7"
            android:inputType="number"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/price"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newware_stoktext"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="4"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/stocknum"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <Button
        android:id="@+id/newware_savewarebutton"
        android:text="@string/saveware"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/textgreen"
        android:background="@color/cardcolorfullstock"
        android:layout_marginTop="70dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

</LinearLayout>